--- a/index.html
+++ b/index.html
@@ -4,9 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="">
+    <meta name="description" content=""><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/estilo.css">
+    <title> Hernan Gich - Fotografía </title>
 </head>
 <body>
+    <header>
+        <div class="container d-flex justify-content-center">
+            <div class="row">
+              <img class="col-12 logo" src="img/absolute.png" alt="Logo">
+            </div>
+          </div>
+    </header>
+
+    <nav>
+        <ul class="nav">
+            <li>
+                <a href="index.html"> Home </a>
+            </li>
+            <li>
+                <a href="pages/portfolio.html"> Portfolio </a>
+            </li>
+            <li>
+                <a href="pages/servicios.html"> Servicios </a>
+            </li>
+            <li>
+                <a href="pages/sobremi.html"> Sobre Mí </a>
+            </li>
+            <li>
+                <a href="pages/contacto.html"> Contacto </a>
+            </li>
+        </ul>
+    </nav>
     
+    <main class="container-fluid main">
+        <div class="row">
+            <div id="carouselExampleControls" class="carousel slide col-12" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="imgMain" src="img/portada.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="imgMain" src="img/imagenindex1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="imgMain" src="img/portada.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                </button>
+            </div>
+        </div>
+        <div class="divServicios">
+            <ul class="serviciosFlex">
+                <li class="servicios"> Eventos </li>
+                <li class="servicios"> Books </li>
+                <li class="servicios"> Campañas </li>
+            </ul>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="footer1">
+            <h3 class="tituloFooter"> Seguime </h3>
+            <img class="logoIng" src="img/instagram.png" alt="">
+            <h3 class="copyright"> · Copyright © 2022 | HG Fotografía | All rights reserved ·</h3>
+        </div>
+        <div class="footer2">
+            <h3 class="tituloFooter"> Contacto </h3>
+            <h3> hernangich@gmail.com </h3>
+            <h3> +54 911 36078421 </h3>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 </html>
