--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <div id="carouselExampleControls" class="carousel slide col-12" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="imgMain" src="img/portada.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="index2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgMain" src="img/imagenindex1.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="index1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgMain" src="img/portada.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="index3.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -73,14 +73,14 @@
 
     <footer class="footer">
         <div class="footer1">
-            <h3 class="tituloFooter"> Seguime </h3>
+            <h3 class="tituloFooter"> · Seguime </h3>
             <img class="logoIng" src="img/instagram.png" alt="">
             <h3 class="copyright"> · Copyright © 2022 | HG Fotografía | All rights reserved ·</h3>
         </div>
         <div class="footer2">
-            <h3 class="tituloFooter"> Contacto </h3>
-            <h3> hernangich@gmail.com </h3>
-            <h3> +54 911 36078421 </h3>
+            <h3 class="tituloFooter"> · Contacto </h3>
+            <h3> · hernangich@gmail.com </h3>
+            <h3> · +54 911 36078421 </h3>
         </div>
     </footer>
 
