--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <div id="carouselExampleControls" class="carousel slide col-12" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="imgMain" src="index2.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="img/index2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgMain" src="index1.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="img/index1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgMain" src="index3.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="img/index3.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
