subiendo segunda entrega proyecto + sass

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -42,24 +42,14 @@
         </ul>
     </nav>
     
-    <main>
-        <div class="container">
-            <div class="row">
-                <img  class="col-4 img1" src="../img/animales.png" alt="">
-                <img  class="col-4 img2" src="../img/naturaleza.png" alt="">
-                <img  class="col-4 img3" src="../img/producciones.png" alt="">
-            </div>  
-            <div class="row">
-                <h2 class="col-4 animales">
-                    Animales
-                </h2>
-                <h2 class="col-4 naturaleza">
-                    Naturaleza
-                </h2>
-                <h2 class="col-4 producciones">
-                    Producciones
-                </h2>
-            </div>
+    <main class="grid">
+        <div>
+            <img  class="img1" src="../img/paisajecontacto.png" alt="">
+        </div>
+        <div class="naturaleza">
+            <h2>
+                Naturaleza
+            </h2>
         </div>
     </main>
     
