subiendo segunda entrega proyecto + sass

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -42,14 +42,24 @@
         </ul>
     </nav>
     
-    <main class="grid">
+    <main class="mainPortfolio">
         <div>
-            <img  class="img1" src="../img/paisajecontacto.png" alt="">
+            <img class="img1" src="../img/paisajecontacto.png" alt="">
         </div>
         <div class="naturaleza">
-            <h2>
-                Naturaleza
-            </h2>
+            <h2> · Naturaleza · </h2>
+        </div>
+        <div>
+            <img class="img1" src="../img/paisajecontacto.png" alt="">
+        </div>
+        <div class="animales">
+            <h2> · Animales · </h2>
+        </div>
+        <div>
+            <img class="img1" src="../img/paisajecontacto.png" alt="">
+        </div>
+        <div class="producciones">
+            <h2> · Producciones · </h2>
         </div>
     </main>
     
