subiendo segunda entrega proyecto + sass

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -45,21 +45,15 @@
     <main class="mainPortfolio">
         <div>
             <img class="img1" src="../img/paisajecontacto.png" alt="">
+            <h2 class="naturaleza"> · Naturaleza · </h2>
         </div>
-        <div class="naturaleza">
-            <h2> · Naturaleza · </h2>
+        <div>
+            <h2 class="animales"> · Animales · </h2>
+            <img class="img1" src="../img/paisajecontacto.png" alt="">
         </div>
         <div>
             <img class="img1" src="../img/paisajecontacto.png" alt="">
-        </div>
-        <div class="animales">
-            <h2> · Animales · </h2>
-        </div>
-        <div>
-            <img class="img1" src="../img/paisajecontacto.png" alt="">
-        </div>
-        <div class="producciones">
-            <h2> · Producciones · </h2>
+            <h2 class="producciones"> · Producciones · </h2>
         </div>
     </main>
     
