subiendo segunda entrega proyecto + sass

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -42,31 +42,31 @@
         </ul>
     </nav>
     
-    <main class="mainPortfolio">
-        <div>
-            <img class="img1" src="../img/paisajecontacto.png" alt="">
-            <h2 class="naturaleza"> · Naturaleza · </h2>
+    <main class="container">
+        <div class="row imgPortfolio">
+            <img class="col-8" src="../img/paisajecontacto.png" alt="">
+            <a class="col-4 tituloPortfolio" href="portfolio/naturaleza.html"> Naturaleza </a>
         </div>
-        <div>
-            <h2 class="animales"> · Animales · </h2>
-            <img class="img1" src="../img/paisajecontacto.png" alt="">
+        <div class="row imgPortfolio">
+            <img class="col-8 imgPortfolio" src="../img/animales.png" alt="">
+            <a class="col-4 tituloPortfolio" href="portfolio/animales.html"> Animales </a>
         </div>
-        <div>
-            <img class="img1" src="../img/paisajecontacto.png" alt="">
-            <h2 class="producciones"> · Producciones · </h2>
+        <div class="row imgPortfolio">
+            <img class="col-8 imgPortfolio" src="../img/producciones.png" alt="">
+            <a class="col-4 tituloPortfolio" href="portfolio/campañas.html"> Campañas </a>
         </div>
     </main>
     
     <footer class="footer">
         <div class="footer1">
-            <h3 class="tituloFooter"> · Seguime </h3>
+            <h3 class="tituloFooter">  Seguime </h3>
             <img class="logoIng" src="../img/instagram.png" alt="">
-            <h3 class="copyright"> · Copyright © 2022 | HG Fotografía | All rights reserved ·</h3>
+            <h3 class="copyright">  Copyright © 2022 | HG Fotografía | All rights reserved </h3>
         </div>
         <div class="footer2">
-            <h3 class="tituloFooter"> · Contacto </h3>
-            <h3> · hernangich@gmail.com </h3>
-            <h3> · +54 911 36078421 </h3>
+            <h3 class="tituloFooter">  Contacto </h3>
+            <h3>  hernangich@gmail.com </h3>
+            <h3>  +54 911 36078421 </h3>
         </div>
     </footer>
 
