--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 
     <footer class="footer">
         <div class="footer1">
-            <h3 class="tituloFooter"> · Seguime </h3>
+            <h3 class="tituloFooter">  Seguime </h3>
             <img class="logoIng" src="img/instagram.png" alt="">
-            <h3 class="copyright"> · Copyright © 2022 | HG Fotografía | All rights reserved ·</h3>
+            <h3 class="copyright">  Copyright © 2022 | HG Fotografía | All rights reserved </h3>
         </div>
         <div class="footer2">
-            <h3 class="tituloFooter"> · Contacto </h3>
-            <h3> · hernangich@gmail.com </h3>
-            <h3> · +54 911 36078421 </h3>
+            <h3 class="tituloFooter">  Contacto </h3>
+            <h3>  hernangich@gmail.com </h3>
+            <h3>  +54 911 36078421 </h3>
         </div>
     </footer>
 
