subiendo segunda entrega proyecto + sass

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -42,16 +42,42 @@
         </ul>
     </nav>
     
+    <main class="mainSobremi">
+        <div class="imgSobremi">
+            <img  class="imgSobremi2" src="../img/sobremi2.png" alt="">
+        </div>
+        <div class="tituloSobremi">
+        <h1>
+            Hernan Gich
+        </h1>
+        </div>
+        <div class="subtituloSobremi">
+        <p>
+            Soy Hernan Gich, estudié Publicidad, Cine y Fotografía. Hace 5 años que me dedico a la Fotografía para marcas o personas.
+        </p>
+        </div>
+        <div class="textoSobremi1">
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, saepe, consectetur ratione molestiae illo repudiandae omnis aliquam impedit, vero expedita aliquid numquam? Quae, necessitatibus porro? Libero doloribus pariatur consequuntur dolores.
+        </p> 
+        </div>
+        <div class="textoSobremi2">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, similique nulla fuga fugiat quod tempore repellat officiis eveniet! Unde rerum doloribus id facere vitae, quisquam ipsam ipsa nostrum voluptas error.
+        </p>
+        </div>
+    </main>
+
     <footer class="footer">
         <div class="footer1">
-            <h3 class="tituloFooter">  Seguime </h3>
+            <h3 class="tituloFooter"> Seguime </h3>
             <img class="logoIng" src="../img/instagram.png" alt="">
-            <h3 class="copyright">  Copyright © 2022 | HG Fotografía | All rights reserved </h3>
+            <h3 class="copyright"> Copyright © 2022 | HG Fotografía | All rights reserved </h3>
         </div>
         <div class="footer2">
             <h3 class="tituloFooter">  Contacto </h3>
-            <h3>  hernangich@gmail.com </h3>
-            <h3>  +54 911 36078421 </h3>
+            <h3> hernangich@gmail.com </h3>
+            <h3> +54 911 36078421 </h3>
         </div>
     </footer>
 
