subiendo segunda entrega proyecto + sass

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -42,29 +42,31 @@
         </ul>
     </nav>
     
-    <main class="mainSobremi">
-        <div class="imgSobremi">
-            <img  class="imgSobremi2" src="../img/sobremi2.png" alt="">
+    <main class="container mainSobremi">
+        <div class="row">
+            <img class="col-7 imgSobremi2" src="../img/sobremi.png" alt="">
         </div>
-        <div class="tituloSobremi">
+        <div class="col-12 tituloSobremi">
         <h1>
-            Hernan Gich
+            Hernan
         </h1>
         </div>
-        <div class="subtituloSobremi">
+        <div class="col-12 subtituloSobremi">
         <p>
             Soy Hernan Gich, estudié Publicidad, Cine y Fotografía. Hace 5 años que me dedico a la Fotografía para marcas o personas.
         </p>
         </div>
-        <div class="textoSobremi1">
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, saepe, consectetur ratione molestiae illo repudiandae omnis aliquam impedit, vero expedita aliquid numquam? Quae, necessitatibus porro? Libero doloribus pariatur consequuntur dolores.
-        </p> 
-        </div>
-        <div class="textoSobremi2">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, similique nulla fuga fugiat quod tempore repellat officiis eveniet! Unde rerum doloribus id facere vitae, quisquam ipsam ipsa nostrum voluptas error.
-        </p>
+        <div class="row">
+            <div class="col-6 textoSobremi1">
+                <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, saepe, consectetur ratione molestiae illo repudiandae omnis aliquam impedit, vero expedita aliquid numquam? Quae, necessitatibus porro? Libero.
+                </p> 
+            </div>
+            <div class="col-6 textoSobremi2">
+                <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, similique nulla fuga fugiat quod tempore repellat officiis eveniet! Unde rerum doloribus id facere vitae, quisquam ipsam ipsa nostrum voluptas error.
+                </p>
+            </div>
         </div>
     </main>
 
