subiendo segunda entrega proyecto + sass

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -59,12 +59,12 @@
         <div class="row">
             <div class="col-6 textoSobremi1">
                 <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, saepe, consectetur ratione molestiae illo repudiandae omnis aliquam impedit, vero expedita aliquid numquam? Quae, necessitatibus porro? Libero.
+                    Desde chico me gustó el arte en todas sus formas. Soy un apasionado de la cámara, tanto para la fotografía como para el video. Es una forma de contar historias que me resulta fascinante. 
                 </p> 
             </div>
             <div class="col-6 textoSobremi2">
                 <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, similique nulla fuga fugiat quod tempore repellat officiis eveniet! Unde rerum doloribus id facere vitae, quisquam ipsam ipsa nostrum voluptas error.
+                    Una fotografía es mucho más que una simple imagen. Sus colores, su forma, los objetos que la conforman. Desde una mirada hasta un paisaje. Te invito a que sigas mi trabajo y pienses las historias que encontrás detrás de cada fotografía.
                 </p>
             </div>
         </div>
