--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
     <header>
         <div class="container d-flex justify-content-center">
             <div class="row">
-              <img class="col-12 logo" src="img/absolute.png" alt="Logo">
+              <img class="col-12 logo" src="img/H.G..png" alt="Logo">
             </div>
           </div>
     </header>
 
     <nav>
         <ul class="nav">
-            <li>
-                <a href="index.html"> Home </a>
-            </li>
             <li>
                 <a href="pages/portfolio.html"> Portfolio </a>
             </li>
