--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <header>
         <div class="container d-flex justify-content-center">
             <div class="row">
-              <img class="col-12 logo" src="img/H.G..png" alt="Logo">
+              <a href="index.html">
+                  <img class="col-12 logo" src="img/H.G..png" alt="Logo">
+              </a>
             </div>
           </div>
     </header>
