--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,16 +18,15 @@
     <header>
         <div class="container d-flex justify-content-center">
             <div class="row">
-              <img class="col-12 logo" src="../img/absolute.png" alt="Logo">
-            </div>
+                <a href="index.html">
+                    <img class="col-12 logo" src="img/H.G..png" alt="Logo">
+                </a>
+              </div>
           </div>
     </header>
 
     <nav>
         <ul class="nav">
-            <li>
-                <a href="../index.html"> Home </a>
-            </li>
             <li>
                 <a href="portfolio.html"> Portfolio </a>
             </li>
