subiendo tercera entrega a github

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -18,8 +18,8 @@
     <header>
         <div class="container d-flex justify-content-center">
             <div class="row">
-                <a href="index.html">
-                    <img class="col-12 logo" src="img/H.G..png" alt="Logo">
+                <a href="../index.html">
+                    <img class="col-12 logo" src="../img/H.G..png" alt="Logo">
                 </a>
               </div>
           </div>
@@ -42,6 +42,35 @@
         </ul>
     </nav>
     
+    <main class="mainServicios">
+        <div>
+            <img  class="imgServicios" src="../img/index4.png" alt="">
+        </div>
+        <div class="flexServicios">
+            <div class="evento">
+                <a> Evento </a>
+                <img class="imgEvento" src="../img/evento.svg" alt="">
+                <p> 
+                    Casamientos · Bautismos  · Bar Mitzvah · Fiestas de 15 · 
+                </p>
+            </div>
+            <div class="book">
+                <a> Book </a>
+                <img class="imgBook" src="../img/evento.svg" alt="">
+                <p> 
+                    Books · Campañas · Curriculum Vitae · Empresarial · 
+                </p>
+            </div>
+            <div class="redesSociales">
+                <a> Redes </a>
+                <img class="imgSocial" src="../img/evento.svg" alt="">
+                <p>
+                    Emprendimientos · Fotografía de producto · 
+                </p>
+            </div>
+        </div>
+    </main>
+
     <footer class="footer">
         <div class="footer1">
             <h3 class="tituloFooter">  Seguime </h3>
