--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,8 +18,8 @@
     <header>
         <div class="container d-flex justify-content-center">
             <div class="row">
-                <a href="index.html">
-                    <img class="col-12 logo" src="img/H.G..png" alt="Logo">
+                <a href="../index.html">
+                    <img class="col-12 logo" src="../img/H.G..png" alt="Logo">
                 </a>
               </div>
           </div>
