--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -44,7 +44,7 @@
     
     <main class="container">
         <div class="row imgPortfolio">
-            <img class="col-8" src="../img/paisajecontacto.png" alt="">
+            <img class="col-8" src="../img/naturaleza.png" alt="">
             <a class="col-4 tituloPortfolio" href="portfolio/naturaleza.html"> Naturaleza </a>
         </div>
         <div class="row imgPortfolio">
