--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -44,7 +44,7 @@
     
     <main class="mainServicios">
         <div>
-            <img  class="imgServicios" src="../img/index4.png" alt="">
+            <img  class="imgServicios" src="../img/servicios.png" alt="">
         </div>
         <div class="flexServicios">
             <div class="evento">
