--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -19,7 +19,7 @@
         <div class="container d-flex justify-content-center">
             <div class="row">
                 <a href="../index.html">
-                    <img class="col-12 logo" src="../img/H.G..png" alt="Logo">
+                    <img class="col-12 logo" src="../img/H.G..png" alt="Logo principal">
                 </a>
               </div>
           </div>
@@ -44,15 +44,15 @@
     
     <main class="container">
         <div class="row imgPortfolio">
-            <img class="col-8" src="../img/naturaleza.png" alt="">
+            <img class="col-8" src="../img/naturaleza.png" alt="portada de album de fotos sobre naturaleza">
             <a class="col-4 tituloPortfolio" href="portfolio/naturaleza.html"> Naturaleza </a>
         </div>
         <div class="row imgPortfolio">
-            <img class="col-8 imgPortfolio" src="../img/animales.png" alt="">
+            <img class="col-8 imgPortfolio" src="../img/animales.png" alt="portada de album de fotos sobre animales">
             <a class="col-4 tituloPortfolio" href="portfolio/animales.html"> Animales </a>
         </div>
         <div class="row imgPortfolio">
-            <img class="col-8 imgPortfolio" src="../img/producciones.png" alt="">
+            <img class="col-8 imgPortfolio" src="../img/producciones.png" alt="portada de album de fotos sobre campañas de moda">
             <a class="col-4 tituloPortfolio" href="portfolio/campañas.html"> Campañas </a>
         </div>
     </main>
@@ -60,7 +60,7 @@
     <footer class="footer">
         <div class="footer1">
             <h3 class="tituloFooter"> Seguime </h3>
-            <img class="logoIng" src="../img/instagram.png" alt="">
+            <img class="logoIng" src="../img/instagram.png" alt="logo de Instagram">
             <h3 class="copyright"> Copyright © 2022 | HG Fotografía | All rights reserved </h3>
         </div>
         <div class="footer2">
