--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -19,7 +19,7 @@
         <div class="container d-flex justify-content-center">
             <div class="row">
                 <a href="../index.html">
-                    <img class="col-12 logo" src="../img/H.G..png" alt="Logo">
+                    <img class="col-12 logo" src="../img/H.G..png" alt="Logo principal">
                 </a>
               </div>
           </div>
@@ -49,21 +49,21 @@
         <div class="flexServicios">
             <div class="evento">
                 <a> Evento </a>
-                <img class="imgEvento" src="../img/evento.svg" alt="">
+                <img class="imgEvento" src="../img/evento.svg" alt="logo para eventos">
                 <p> 
                     Casamientos · Bautismos  · Bar Mitzvah · Fiestas de 15 · 
                 </p>
             </div>
             <div class="book">
                 <a> Book </a>
-                <img class="imgBook" src="../img/evento.svg" alt="">
+                <img class="imgBook" src="../img/campaña.svg" alt="logo para sesion de fotos">
                 <p> 
                     Books · Campañas · Curriculum Vitae · Empresarial · 
                 </p>
             </div>
             <div class="redesSociales">
                 <a> Redes </a>
-                <img class="imgSocial" src="../img/evento.svg" alt="">
+                <img class="imgSocial" src="../img/redes.svg" alt="logo de redes sociales">
                 <p>
                     Emprendimientos · Fotografía de producto · 
                 </p>
@@ -74,7 +74,7 @@
     <footer class="footer">
         <div class="footer1">
             <h3 class="tituloFooter">  Seguime </h3>
-            <img class="logoIng" src="../img/instagram.png" alt="">
+            <img class="logoIng" src="../img/instagram.png" alt="logo de Instagram">
             <h3 class="copyright">  Copyright © 2022 | HG Fotografía | All rights reserved </h3>
         </div>
         <div class="footer2">
