--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container d-flex justify-content-center">
             <div class="row">
               <a href="index.html">
-                  <img class="col-12 logo" src="img/H.G..png" alt="Logo">
+                  <img class="col-12 logo" src="img/H.G..png" alt="Logo principal">
               </a>
             </div>
           </div>
@@ -47,13 +47,13 @@
             <div id="carouselExampleControls" class="carousel slide col-12" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="imgMain" src="img/index2.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="img/index2.png" class="d-block w-100" alt="imagen de portada">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgMain" src="img/index1.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="img/index1.png" class="d-block w-100" alt="imagen de portada">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgMain" src="img/index3.png" class="d-block w-100" alt="...">
+                        <img class="imgMain" src="img/index3.png" class="d-block w-100" alt="imagen de portada">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -74,7 +74,7 @@
     <footer class="footer">
         <div class="footer1">
             <h3 class="tituloFooter"> Seguime </h3>
-            <img class="logoIng" src="img/instagram.png" alt="">
+            <img class="logoIng" src="img/instagram.png" alt="logo de Instagram">
             <h3 class="copyright"> Copyright © 2022 | HG Fotografía | All rights reserved </h3>
         </div>
         <div class="footer2">
