--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
         <div class="container d-flex justify-content-center">
             <div class="row">
                 <a href="../index.html">
-                    <img class="col-12 logo" src="../img/H.G..png" alt="Logo">
+                    <img class="col-12 logo" src="../img/H.G..png" alt="Logo principal">
                 </a>
               </div>
           </div>
@@ -63,7 +63,7 @@
     <footer class="footer">
         <div class="footer1">
             <h3 class="tituloFooter">  Seguime </h3>
-            <img class="logoIng" src="../img/instagram.png" alt="">
+            <img class="logoIng" src="../img/instagram.png" alt="logo de Instagram">
             <h3 class="copyright">  Copyright © 2022 | HG Fotografía | All rights reserved </h3>
         </div>
         <div class="footer2">
