--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -56,7 +56,7 @@
             </div>
             <div class="book">
                 <a> Book </a>
-                <img class="imgBook" src="../img/campaña.svg" alt="logo para sesion de fotos">
+                <img class="imgBook" src="../img/campania.svg" alt="logo para sesion de fotos">
                 <p> 
                     Books · Campañas · Curriculum Vitae · Empresarial · 
                 </p>
